--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@types/node": "12.12.8",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/styled-components": "^4.4.0",
+    "@types/styled-system": "^5.1.3",
+    "babel-plugin-styled-components": "^1.10.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
